--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "vite-tsconfig-paths": "^4.2.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.2.0",
+    "@commitlint/config-conventional": "^18.1.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
@@ -40,5 +42,9 @@
     "vite": "^4.4.5"
   },
   "lint-staged": {
-    "*.{js,css,ts,tsx,jsx}": ["yarn format", "yarn lint"]}
+    "*.{js,css,ts,tsx,jsx}": [
+      "yarn format",
+      "yarn lint"
+    ]
+  }
 }
