--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,10 +10,11 @@ on:
       - main
 
 jobs:
-  lint:
+  health-check:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - run: |
               yarn install
               yarn lint
+              yarn test:coverage
