--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,30 +4,30 @@ on:
   workflow_dispatch:
   pull_request:
     branches:
-      main
+      - main
   push:
     branches:
-      main
+      - main
 
 jobs:
   health-check:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
       
       - name: Install Dependencies
-      - run: yarn install
+        run: yarn install
 
       - name: Check Lint
-      - run: yarn lint
+        run: yarn lint
 
       - name: Check Code Coverage
-      - run: yarn test:coverage
+        run: yarn test:coverage
 
       - name: Produce the coverage report
-      - uses: insightsengineering/coverage-action@v2
-      - with:
+        uses: insightsengineering/coverage-action@v2
+        with:
           path: ./cobertura.xml
           threshold: 95
           fail: true
