--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - name: Checkout 🛎
         uses: actions/checkout@v3
-      
+
       - name: Install Dependencies
         run: yarn install
 
@@ -26,13 +26,7 @@ jobs:
         run: yarn test:coverage
 
       - name: Produce the coverage report
-        uses: insightsengineering/coverage-action@v2
+        uses: ArtiomTr/jest-coverage-report-action@v2
         with:
-          path: ./cobertura.xml
-          threshold: 95
-          fail: true
-          publish: true
-          diff: true
-          diff-branch: main
-          diff-storage: _xml_coverage_reports
-          coverage-summary-title: "Code Coverage Summary"
+          package-manager: yarn
+          custom-title: "Code Coverage Summary"
