--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,10 @@ on:
 
 jobs:
   health-check:
-    permissions: write-all
+    permissions:
+      contents: write
+      pull-requests: write
+      checks: write
     name: Code Health Check
     runs-on: ubuntu-latest
     steps:
