--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           package-manager: yarn
-          coverage-file: report.json
+          skip-step: install
           base-coverage-file: report.json
           annotations: none
           custom-title: "Code Coverage Summary"
