--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build:prod": "tsc && vite build",
+    "build:dev": "tsc && vite build --mode dev",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --write '.' --config ./.prettierrc",
     "preview": "vite preview",
